compile.log.txt
all target platforms...
========================================
Starting build for aarch64-unknown-linux-musl...
error[E0432]: unresolved import `crate::monitor::connection`
 --> bandix/src/api/connection.rs:2:21
  |
2 | use crate::monitor::connection::GlobalConnectionStats;
  |                     ^^^^^^^^^^ could not find `connection` in `monitor`
error[E0432]: unresolved import `crate::monitor::DnsQueryRecord`
 --> bandix/src/api/dns.rs:3:5
  |
3 | use crate::monitor::DnsQueryRecord;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `DnsQueryRecord` in `monitor`
error[E0432]: unresolved imports `crate::monitor::ConnectionModuleContext`, `crate::monitor::DnsModuleContext`, `crate::monitor::ModuleContext`, `crate::monitor::MonitorManager`, `crate::monitor::TrafficModuleContext`
 --> bandix/src/command.rs:4:22
  |
4 | use crate::monitor::{ConnectionModuleContext, DnsModuleContext, ModuleContext, MonitorManager, TrafficModuleContext};
  |                      ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^ no `TrafficModuleContext` in `monitor`
  |                      |                        |                 |              |
  |                      |                        |                 |              no `MonitorManager` in `monitor`
  |                      |                        |                 no `ModuleContext` in `monitor`
  |                      |                        no `DnsModuleContext` in `monitor`
  |                      no `ConnectionModuleContext` in `monitor`
error[E0412]: cannot find type `DnsQueryRecord` in module `crate::monitor`
   --> bandix/src/api/dns.rs:238:72
    |
238 |     fn _generate_test_data(dns_queries: &Arc<Mutex<Vec<crate::monitor::DnsQueryRecord>>>) {
    |                                                                        ^^^^^^^^^^^^^^ not found in `crate::monitor`
error[E0422]: cannot find struct, variant or union type `DnsQueryRecord` in module `crate::monitor`
   --> bandix/src/api/dns.rs:350:42
    |
350 |             queries.push(crate::monitor::DnsQueryRecord {
    |                                          ^^^^^^^^^^^^^^ not found in `crate::monitor`
error[E0282]: type annotations needed
   --> bandix/src/api/dns.rs:610:70
    |
610 |         let queries = if let Ok(queries) = self.dns_queries.lock() { queries.clone() } else { vec![] };
    |                                                                      ^^^^^^^ cannot infer type
error[E0282]: type annotations needed
   --> bandix/src/command.rs:642:9
    |
642 |     let mut tasks = monitor_manager.start_modules(module_contexts, shutdown_notify.clone()).await?;
    |         ^^^^^^^^^
643 |
644 |     tasks.push(web_task);
    |     ----- type must be known at this point
    |
help: consider giving `tasks` an explicit type
    |
642 |     let mut tasks: /* Type */ = monitor_manager.start_modules(module_contexts, shutdown_notify.clone()).await?;
    |                  ++++++++++++
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `connection`
  --> bandix/src/monitor/mod.rs:20:5
   |
20 |     connection::flush().await;
   |     ^^^^^^^^^^ use of unresolved module or unlinked crate `connection`
   |
help: to make use of source file bandix/src/monitor/connection.rs, use `mod connection` in this file to declare the module
  --> bandix/src/main.rs:1:1
   |
 1 + mod connection;
   |
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dns`
  --> bandix/src/monitor/mod.rs:21:5
   |
21 |     dns::flush().await;
   |     ^^^ use of unresolved module or unlinked crate `dns`
   |
help: to make use of source file bandix/src/monitor/dns.rs, use `mod dns` in this file to declare the module
  --> bandix/src/main.rs:1:1
   |
 1 + mod dns;
   |
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `traffic`
  --> bandix/src/monitor/mod.rs:22:5
   |
22 |     traffic::flush().await;
   |     ^^^^^^^ use of unresolved module or unlinked crate `traffic`
   |
help: to make use of source file bandix/src/monitor/traffic.rs, use `mod traffic` in this file to declare the module
  --> bandix/src/main.rs:1:1
   |
 1 + mod traffic;
   |
error[E0425]: cannot find function `persist_all` in this scope
  --> bandix/src/monitor/mod.rs:24:5
   |
24 |     persist_all().await;
   |     ^^^^^^^^^^^ not found in this scope
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `connection`
  --> bandix/src/monitor/mod.rs:38:5
   |
38 |     connection::flush().await;
   |     ^^^^^^^^^^ use of unresolved module or unlinked crate `connection`
   |
help: to make use of source file bandix/src/monitor/connection.rs, use `mod connection` in this file to declare the module
  --> bandix/src/main.rs:1:1
   |
 1 + mod connection;
   |
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dns`
  --> bandix/src/monitor/mod.rs:39:5
   |
39 |     dns::flush().await;
   |     ^^^ use of unresolved module or unlinked crate `dns`
   |
help: to make use of source file bandix/src/monitor/dns.rs, use `mod dns` in this file to declare the module
  --> bandix/src/main.rs:1:1
   |
 1 + mod dns;
   |
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `traffic`
  --> bandix/src/monitor/mod.rs:40:5
   |
40 |     traffic::flush().await;
   |     ^^^^^^^ use of unresolved module or unlinked crate `traffic`
   |
help: to make use of source file bandix/src/monitor/traffic.rs, use `mod traffic` in this file to declare the module
  --> bandix/src/main.rs:1:1
   |
 1 + mod traffic;
   |
error[E0425]: cannot find function `persist_all` in this scope
  --> bandix/src/monitor/mod.rs:42:5
   |
42 |     persist_all().await;
   |     ^^^^^^^^^^^ not found in this scope
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `storage`
  --> bandix/src/monitor/mod.rs:44:21
   |
44 |     if let Err(e) = storage::sync_barrier() {
   |                     ^^^^^^^ use of unresolved module or unlinked crate `storage`
   |
   = help: if you wanted to use a crate named `storage`, use `cargo add storage` to add it to your `Cargo.toml`
error[E0282]: type annotations needed
   --> bandix/src/api/dns.rs:239:13
    |
239 |         let mut queries = match dns_queries.lock() {
    |             ^^^^^^^^^^^
...
244 |         if queries.len() > 100 {
    |            ------- type must be known at this point
    |
help: consider giving `queries` an explicit type
    |
239 |         let mut queries: /* Type */ = match dns_queries.lock() {
    |                        ++++++++++++
Some errors have detailed explanations: E0282, E0412, E0422, E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `bandix` (bin "bandix") due to 17 previous errors
✗ cargo build failed: aarch64-unknown-linux-musl
----------------------------------------
Build completion summary: